--- a/css/styles.css
+++ b/css/styles.css
@@ -513,6 +513,12 @@ h3 {
   margin-bottom: 30px;
 }
 
+.modal-checkbox-label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 .checkbox-square {
   width: 16px;
   height: 16px;
