--- a/css/main.css
+++ b/css/main.css
@@ -415,10 +415,6 @@ h3 {
   color: var(--black-color);
 }
 
-.logo-white {
-  color: var(--white-color);
-}
-
 .studio,
 .portfolio,
 .contact {
@@ -530,8 +526,7 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.order-button:hover,
-.order-button:focus {
+.order-button:hover, .order-button:focus {
   background-color: var(--order-btn-backgrn-clr);
 }
 
@@ -649,8 +644,7 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.grey-icon-link:hover,
-.grey-icon-link:focus {
+.grey-icon-link:hover, .grey-icon-link:focus {
   background-color: var(--hover-color);
   fill: var(--white-color);
 }
@@ -669,6 +663,12 @@ h3 {
   margin-right: 30px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.our-client:hover, .our-client:focus {
+  fill: var(--hover-color);
+  border-color: var(--hover-color);
+  cursor: pointer;
 }
 
 .our-client-link {
@@ -692,10 +692,7 @@ h3 {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-client-link:hover,
-.our-client:hover,
-.our-client-link:focus,
-.our-client:focus {
+.our-client-link:hover, .our-client-link:focus {
   fill: var(--hover-color);
   border-color: var(--hover-color);
   cursor: pointer;
@@ -726,8 +723,7 @@ h3 {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button:hover,
-.button:focus {
+.button:hover, .button:focus {
   cursor: pointer;
   background-color: var(--hover-color);
   color: var(--white-color);
@@ -752,8 +748,7 @@ h3 {
   margin-bottom: 30px;
 }
 
-.a-tag-portfolio:hover,
-.a-tag-portfolio:focus {
+.a-tag-portfolio:hover, .a-tag-portfolio:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
@@ -886,7 +881,7 @@ h3 {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-modal-button:hover {
+.close-modal-button:hover, .close-modal-button:focus {
   fill: var(--hover-color);
 }
 
@@ -936,23 +931,25 @@ h3 {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-field:hover, .modal-field:focus,
+.user-text-modal:hover,
+.user-text-modal:focus {
+  border-color: var(--hover-color);
+  outline-color: var(--hover-color);
+}
+
+.modal-field:hover, .modal-field:focus + .modal-svg,
+.user-text-modal:hover,
+.user-text-modal:focus + .modal-svg {
+  fill: var(--hover-color);
+}
+
 .modal-svg {
   position: absolute;
   top: 14px;
   left: 14px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-field:hover,
-.modal-field:hover + .modal-svg,
-.user-text-modal:hover,
-.modal-field:focus,
-.modal-field:focus + .modal-svg,
-.user-text-modal:focus {
-  border-color: var(--hover-color);
-  outline-color: var(--hover-color);
-  fill: var(--hover-color);
 }
 
 .modal-field:last-child {
@@ -1041,7 +1038,7 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-submit-btn:hover {
+.modal-submit-btn:hover, .modal-submit-btn:focus {
   background-color: var(--order-btn-backgrn-clr);
 }
 
@@ -1122,6 +1119,10 @@ h3 {
   color: var(--hover-color);
 }
 
+.logo-white {
+  color: var(--white-color);
+}
+
 .address {
   font-style: normal;
   font-weight: normal;
@@ -1195,8 +1196,7 @@ h3 {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.white-icon-link:hover,
-.white-icon-link:focus {
+.white-icon-link:hover, .white-icon-link:focus {
   background-color: var(--hover-color);
   cursor: pointer;
 }
@@ -1263,7 +1263,7 @@ h3 {
   letter-spacing: 0.06em;
 }
 
-.submit-button-footer:hover {
+.submit-button-footer:hover, .submit-button-footer:focus {
   background-color: var(--order-btn-backgrn-clr);
 }
 
