--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -22,7 +22,11 @@
     letter-spacing: 0.03em;
     color: var(--hover-color);
   }
-  
+   
+  .logo-white {
+    color: var(--white-color);
+  }
+ 
   .address {
     font-style: normal;
     font-weight: normal;
@@ -79,14 +83,12 @@
     border-radius: 50px;
     fill: var(--white-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .white-icon-link:hover,
-  .white-icon-link:focus {
-    background-color: var(--hover-color);
+    &:hover, &:focus {
+          background-color: var(--hover-color);
     cursor: pointer;
+    }
   }
-  
+
   .footer-spam-block {
     margin-left: 93px;
   }
@@ -134,10 +136,9 @@
     font-size: 16px;
     line-height: 1.87;
     letter-spacing: 0.06em;
-  }
-  
-  .submit-button-footer:hover {
-    background-color: var(--order-btn-backgrn-clr);
+    &:hover, &:focus {
+      background-color: var(--order-btn-backgrn-clr);
+    }
   }
   
   .icon-send {
