--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -47,11 +47,11 @@
     border: 1px solid var(--border-close-modal-button-color);
     cursor: pointer;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+      fill: var(--hover-color);
+    }  
   }
   
-  .close-modal-button:hover {
-    fill: var(--hover-color);
-  }
   
   .modal-caption {
     font-weight: bold;
@@ -91,6 +91,14 @@
     letter-spacing: 0.01em;
     padding: 12px 0 12px 42px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+      border-color: var(--hover-color);
+      outline-color: var(--hover-color);
+    } 
+
+    &:hover, &:focus + .modal-svg {
+      fill: var(--hover-color);
+    }
   }
   
   .modal-svg {
@@ -98,17 +106,6 @@
     top: 14px;
     left: 14px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  
-  .modal-field:hover,
-  .modal-field:hover + .modal-svg,
-  .user-text-modal:hover,
-  .modal-field:focus,
-  .modal-field:focus + .modal-svg,
-  .user-text-modal:focus {
-    border-color: var(--hover-color);
-    outline-color: var(--hover-color);
-    fill: var(--hover-color);
   }
   
   .modal-field:last-child {
@@ -183,11 +180,12 @@
     margin-left: auto;
     margin-right: auto;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover, &:focus {
+      background-color: var(--order-btn-backgrn-clr);
+    }
   }
   
-  .modal-submit-btn:hover {
-    background-color: var(--order-btn-backgrn-clr);
-  }
+
   
   /* about us section */
   .about-us-li {
