--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -16,17 +16,16 @@
     font-size: 16px;
     line-height: 1.62;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  .button:hover,
-  .button:focus {
-    cursor: pointer;
-    background-color: var(--hover-color);
-    color: var(--white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-      0px 2px 2px rgba(0, 0, 0, 0.12);
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+      &:hover, &:focus {
+      cursor: pointer;
+      background-color: var(--hover-color);
+      color: var(--white-color);
+      box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    }
   }
   
   .current-btn {
@@ -47,11 +46,13 @@
     margin-bottom: 30px;
   }
   
-  .a-tag-portfolio:hover,
-  .a-tag-portfolio:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+  .a-tag-portfolio {
+    &:hover, &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
   }
+
   
   .projects-img-block:nth-child(3n + 3) {
     margin-right: 0;
@@ -103,6 +104,7 @@
     left: 50%;
     transform: translate(-50%, 101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
   }
   
   .a-tag-portfolio:hover .projects-hover-text {
