--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -41,7 +41,7 @@ h3 {
 
 .a-tag,
 .a-tag-header,
-.a-tag-portfolio {
+.projects__link {
   color: var(--black-color);
   text-decoration: none;
   display: block;
