--- a/css/main.css
+++ b/css/main.css
@@ -331,7 +331,7 @@ h3 {
 
 .a-tag,
 .a-tag-header,
-.a-tag-portfolio {
+.projects__link {
   color: var(--black-color);
   text-decoration: none;
   display: block;
@@ -705,7 +705,7 @@ h3 {
   margin-bottom: 50px;
 }
 
-.button-li {
+.button-list__li {
   margin-right: 8px;
 }
 
@@ -741,33 +741,33 @@ h3 {
       flex-wrap: wrap;
 }
 
-.projects-img-block {
+.projects {
   width: 370px;
   margin-right: 30px;
   background: var(--white-color);
   margin-bottom: 30px;
 }
 
-.a-tag-portfolio:hover, .a-tag-portfolio:focus {
+.projects__link:hover, .projects__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.projects-img-block:nth-child(3n + 3) {
+.projects:nth-child(3n + 3) {
   margin-right: 0;
 }
 
-.projects-img-block:nth-last-child(-n + 3) {
+.projects:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
-.projects-text {
+.projects__text-block {
   padding: 20px 24px;
   border: 1px solid var(--projects-color);
   border-top: 0;
 }
 
-.projects-name {
+.projects__name {
   margin-bottom: 4px;
   font-weight: bold;
   font-size: 18px;
@@ -776,7 +776,7 @@ h3 {
   color: var(--black-color);
 }
 
-.projects-descrition {
+.projects__description {
   margin: 0;
   font-size: 16px;
   line-height: 1.87;
@@ -784,12 +784,12 @@ h3 {
   color: var(--grey-color);
 }
 
-.projects-hover-block {
+.projects__hover-block {
   position: relative;
   overflow: hidden;
 }
 
-.projects-hover-text {
+.projects__hover-text {
   background-color: var(--projects-hover-text);
   color: var(--white-color);
   font-size: 18px;
@@ -810,7 +810,7 @@ h3 {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.a-tag-portfolio:hover .projects-hover-text {
+.projects__link:hover .projects__hover-text {
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
 }
