--- a/sass/main.css
+++ b/sass/main.css
@@ -698,18 +698,18 @@ h3 {
   cursor: pointer;
 }
 
-.button-block__list {
+.button-list {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 50px;
 }
 
-.list-item {
+.button-list__item {
   margin-right: 8px;
 }
 
-.list-item__button {
+.button {
   padding: 6px 22px;
   border-width: 0px;
   background-color: var(--milk-color);
@@ -723,7 +723,7 @@ h3 {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.list-item__button:hover, .list-item__button:focus {
+.button:hover, .button:focus {
   cursor: pointer;
   background-color: var(--hover-color);
   color: var(--white-color);
@@ -741,31 +741,23 @@ h3 {
       flex-wrap: wrap;
 }
 
-.projects__proj-list {
+.projects {
   width: 370px;
   margin-right: 30px;
   background: var(--white-color);
   margin-bottom: 30px;
-  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.projects__proj-list:hover, .projects__proj-list:focus {
+.projects__link:hover, .projects__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.proj-list__proj-link {
-  text-decoration: none;
-}
-
-.projects__proj-list:nth-child(3n + 3) {
+.projects:nth-child(3n + 3) {
   margin-right: 0;
 }
 
-.projects__proj-list:nth-last-child(-n + 3) {
+.projects:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
 
@@ -792,12 +784,12 @@ h3 {
   color: var(--grey-color);
 }
 
-.proj-link__proj-hover-block {
+.projects__hover-block {
   position: relative;
   overflow: hidden;
 }
 
-.proj-hover-block__proj-hover-text {
+.projects__hover-text {
   background-color: var(--projects-hover-text);
   color: var(--white-color);
   font-size: 18px;
@@ -818,7 +810,7 @@ h3 {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.proj-list__proj-link:hover .proj-hover-block__proj-hover-text {
+.projects__link:hover .projects__hover-text {
   -webkit-transform: translate(-50%, 0);
           transform: translate(-50%, 0);
 }
