--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,13 +1,13 @@
-.button-list {
+.button-block__list {
     justify-content: center;
     margin-bottom: 50px;
   }
   
-  .button-list__item {
+  .list-item {
     margin-right: 8px;
   }
   
-  .button {
+  .list-item__button {
     padding: 6px 22px;
     border-width: 0px;
     background-color: var(--milk-color);
@@ -39,24 +39,27 @@
 
 }
 
-  .projects {
+  .projects__proj-list {
     width: 370px;
     margin-right: 30px;
     background: var(--white-color);
     margin-bottom: 30px;
-  }
-  
-  .projects__link {
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:hover, &:focus {
       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
         1px 4px 6px rgba(0, 0, 0, 0.16);
     }
   }
   
-  .projects:nth-child(3n + 3) {
+  .proj-list__proj-link {
+    text-decoration: none ;
+
+  }
+  
+  .projects__proj-list:nth-child(3n + 3) {
     margin-right: 0;
   }
-  .projects:nth-last-child(-n + 3) {
+  .projects__proj-list:nth-last-child(-n + 3) {
     margin-bottom: 0;
   }
   
@@ -83,12 +86,12 @@
     color: var(--grey-color);
   }
   
-  .projects__hover-block {
+  .proj-link__proj-hover-block {
     position: relative;
     overflow: hidden;
   }
   
-  .projects__hover-text {
+  .proj-hover-block__proj-hover-text {
     background-color: var(--projects-hover-text);
     color: var(--white-color);
     font-size: 18px;
@@ -106,6 +109,6 @@
   
   }
   
-  .projects__link:hover .projects__hover-text {
+  .proj-list__proj-link:hover .proj-hover-block__proj-hover-text {
     transform: translate(-50%, 0);
   }
