--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables";
-@import "./utils/modern-normalize";
-@import "./utils/global";
+@import "./base/modern-normalize";
+@import "./base/global";
 @import "./components/header";
 @import "./components/index";
 @import "./components/portfolio";
